--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Likes and Dislikes of The Four Seasons</title>
@@ -7,5 +8,59 @@
 
 <body>
     <h1>Summer</h1>
+
+    <h2>Likes</h2>
+    <p>One the best thing about summer is the long days. It feels good to know that the sun doesn't set until
+        8:30pm. The freedom to enjoy the outdoors, spending time with friends and family doing a backyard BBQ.
+        Driving with your window down is great feeling. Everything feels more alive.</p>
+
+    <h2>Dislikes</h2>
+    <p>I hate it when there a heat wave coming in. It's hard to anything outside when the sun is beating down on you.
+        Bugs are the absolute worse. Waking up the next day after enjoying outdoor BBQ only to find out my leg been
+        bitten by mosquitos a few times. Sleeping is near impossible if don't have anything to cool your room.
+    </p>
+
+    <h1>Autumn</h1>
+
+    <h2>Likes</h2>
+    <p>Autumn is a season that many people enjoy because it brings cooler weather and a calm, comfy atmosphere after the
+        hot summer. The changing colors of the leaves make the environment very beautiful, and wearing
+        sweaters and hoodies adds to the comfort of the season. Autumn is also loved for its holidays and
+        relaxing evenings.</p>
+
+    <h2>Dislikes</h2>
+    <p>However, the season also has its downsides, such as shorter days, colder mornings, and frequent rain that can
+        feel
+        gloomy. For some people, just the thought of the transition into winter makes them feel down. The worst of it is
+        when
+        you have a lot of trees in your hard. Raking the fallens leaves is not fun. </p>
+
+    <h1>Winter</h1>
+
+    <h2>Likes</h2>
+    <p>Even though many people don't like the winter, it certainly has its unique charm. The snowy landscapes, the snow
+        that
+        build on tree on tree branches is absolutly beautiful. The cold weather makes staying indoors feel cozy,
+        especially
+        with warm blankets, hot chocolate, and time spent with family during holidays like Christmas and New Year.</p>
+
+    <h2>Dislikes</h2>
+    <p>Winter can be difficult because of freezing temperatures, slippery roads, and shorter days that make
+        everything feel darker and more tiring. Getting out of bed on cold mornings is hard, and illnesses like colds
+        and
+        flu are more common. The snow build up makes driving on roads an absolute nightmare.</p>
+
+    <h1>Spring</h1>
+
+    <h2>Likes</h2>
+    <p>Spring is a refreshing season that many people enjoy because it represents new beginnings and fresh energy.
+        Flowers
+        bloom, trees turn green again, and the warmer weather makes it pleasant to spend time outdoors. Spring is also a
+        great time for picnics, festivals, and enjoying longer days.</p>
+
+    <h2>Dislikes</h2>
+    <p>However, the season has its downsides, including unpredictable weather, sudden rain showers, and allergies caused
+        by pollen. Insects also start to appear, which can be annoying. Daylights saving ruining my sleep. </p>
 </body>
+
 </html>
